server/src/server/tests/snapshots/djinn_server__server__tests__contracts__epic_list_response.snap
---
source: src/server/tests/contracts.rs
expression: epic_list
---
{
  "epics": [
    {
      "id": "[UUID]",
      "short_id": "[SHORT_ID]",
      "title": "Snapshot Epic",
      "description": "Epic used for MCP snapshot contract testing",
      "emoji": "",
      "color": "",
      "status": "open",
      "owner": "",
      "created_at": "[TIMESTAMP]",
      "updated_at": "[TIMESTAMP]",
      "closed_at": null,
      "memory_refs": [],
      "auto_breakdown": true
    }
  ],
  "total_count": 1,
  "limit": 10,
  "offset": 0,
  "has_more": false
}
