server/src/server/tests/snapshots/djinn_server__server__tests__contracts__epic_show_response.snap
---
source: src/server/tests/contracts.rs
expression: epic_show
---
{
  "id": "[UUID]",
  "short_id": "[SHORT_ID]",
  "title": "Snapshot Epic",
  "description": "Epic used for MCP snapshot contract testing",
  "emoji": "",
  "color": "",
  "status": "drafting",
  "owner": "",
  "created_at": "[TIMESTAMP]",
  "updated_at": "[TIMESTAMP]",
  "closed_at": null,
  "memory_refs": [],
  "auto_breakdown": true,
  "task_count": 1,
  "open_count": 1,
  "in_progress_count": 0,
  "closed_count": 0
}
