server/src/server/tests/snapshots/djinn_server__server__tests__contracts__task_activity_list_response.snap
---
source: src/server/tests/contracts.rs
expression: task_activity
---
{
  "entries": [
    {
      "id": "[UUID]",
      "task_id": "[UUID]",
      "actor_id": "[UUID]",
      "actor_role": "user",
      "event_type": "comment",
      "payload": {
        "body": "snapshot comment"
      },
      "created_at": "[TIMESTAMP]"
    }
  ],
  "count": 1
}
