server/src/server/tests/snapshots/djinn_server__server__tests__contracts__task_blockers_list_response.snap
---
source: src/server/tests/contracts.rs
expression: blockers
---
{
  "error": "invalid arguments for tool 'task_blockers_list': invalid type: null, expected a string",
  "ok": false
}
