server/src/server/tests/snapshots/djinn_server__server__tests__contracts__task_count_grouped_by_priority_response.snap
---
source: src/server/tests/contracts.rs
expression: task_count_priority
---
{
  "groups": [
    {
      "key": "0",
      "count": 1
    }
  ]
}
