server/src/server/tests/snapshots/djinn_server__server__tests__contracts__task_count_grouped_by_status_response.snap
---
source: src/server/tests/contracts.rs
expression: task_count_status
---
{
  "groups": [
    {
      "key": "open",
      "count": 1
    }
  ]
}
