server/src/server/tests/snapshots/djinn_server__server__tests__contracts__task_list_response.snap
---
source: src/server/tests/contracts.rs
expression: task_list
---
{
  "tasks": [
    {
      "id": "[UUID]",
      "short_id": "[SHORT_ID]",
      "epic_id": "[UUID]",
      "title": "Snapshot Task",
      "description": "Task used for MCP snapshot contract testing",
      "design": "",
      "issue_type": "task",
      "status": "open",
      "priority": 0,
      "owner": "",
      "labels": [],
      "memory_refs": [],
      "acceptance_criteria": [
        "Snapshot task acceptance criterion"
      ],
      "reopen_count": 0,
      "continuation_count": 0,
      "verification_failure_count": 0,
      "total_reopen_count": 0,
      "total_verification_failure_count": 0,
      "intervention_count": 0,
      "created_at": "[TIMESTAMP]",
      "updated_at": "[TIMESTAMP]",
      "closed_at": null,
      "close_reason": null,
      "merge_commit_sha": null,
      "unresolved_blocker_count": 0,
      "created_by_user_id": null,
      "session_count": 0
    }
  ],
  "total_count": 1,
  "limit": 10,
  "offset": 0,
  "has_more": false
}
